Are you a user?
Are you authorized to see this page?
Are you authorized to change this page?


models.py 47: added autoincrement to Users class primary key.

forms.py 49-50: added CRSF form for valid log out post requests

base.html 59-63: made logout into a form POST with a hidden field for the csrf token

app.py 35-38: added csrf_form property to g "object" assigned to instance of CSRF form (line 2) --> updated line 7

app.py 128-133: added functionality to '/logout' route to invoke do_logout() on a valid logout form submission

app.py 41: added a before_request function to add CSRF protection form to global "g".


app.py 134: added success bootstrap to log-out message

users/followers.html, /following.html, /deatil.html, /index.html and messages/show.html:
added {{ g.csrf_form.hidden_tag() }} to post route buttons


app.py 325 added a try-except to handle errors of deleting a message that isn't user's gracefully.

users/login-to-delete.html: Added a new login to delete html to force user to login prior to deleting account

users/detail.html: Changed Delete button to a GET method to ensure additional authentication prior to delete --> Reverted

app.py 265-273: Added code to start a new login form and confirm user prior to deletion.  --> Reverted

app.py 265-273: Added authentication to deleting a user & user messages.  --> Reverted

app.py 267-269: Added message delete loop prior to user deletion due to relational constraints in data tables

users/detail.html 4-16, 95, 98: Added header image to html to render and refereneced user.header_image_url, showed user bio and location referencing user


app.py 242: authenticated user for profile edits and pre-filled edit-fields

followers, following.html: added bio information to users, followers, and following pages

forms.py 50: added new form model for editing user.





